--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
             "email": "dziemboh@gmail.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "Dziem\\Kamus\\": ""
+        }
+    },
     "require": {}
 }
